update swagger, refactoring, add theme
