# docs/openapi.yaml
@@ -10,7 +10,8 @@ info:
     With user registration, authentication, and different access levels, Task Pro ensures data security and provides access only to relevant information.
 servers:
   - url: http://localhost:3000
-  - url: https://goit-project-02-front-end.onrender.com
+    description: Local server
+  - url: https://goit-project-02-front-end-smoky.vercel.app
     description: Frontend application
   - url: https://goit-project-02-back-end.onrender.com
     description: Backend API
@@ -54,21 +55,17 @@ paths:
       security:
         - bearerAuth: []
       $ref: ../swagger/paths/auth/logout/post.yaml
-  /auth/refresh:
-    post:
-      $ref: ../swagger/paths/auth/refresh/post.yaml
-  /auth/send-reset-email:
-    post:
-      $ref: ../swagger/paths/auth/send-reset-email/post.yaml
-  /auth/reset-password:
-    post:
-      $ref: ../swagger/paths/auth/reset-password/post.yaml
   /auth/get-oauth-url:
     get:
       $ref: ../swagger/paths/auth/Google-Auth/get.yaml
   /auth/confirm-google-auth:
     post:
       $ref: ../swagger/paths/auth/Google-Login/post.yaml
+  /user/profile:
+    get:
+      $ref: ../swagger/paths/user/profile/get.yaml
+    patch:
+      $ref: ../swagger/paths/user/profile/patch.yaml
 components:
   securitySchemes:
     bearerAuth:
