# src/routers/auth.js
@@ -6,14 +6,6 @@ import { validateBody } from '../middlewares/validateBody.js';
 import { loginUserSchema } from '../validation/auth.js';
 import { loginUserController } from '../controllers/auth.js';
 import { logoutUserController } from '../controllers/auth.js';
-import { refreshUserSessionController } from '../controllers/auth.js';
-import { requestResetEmailSchema } from '../validation/auth.js';
-import { requestResetEmailController } from '../controllers/auth.js';
-import { resetPasswordSchema } from '../validation/auth.js';
-import { resetPasswordController } from '../controllers/auth.js';
-// import { getGoogleAuthUrlController } from '../controllers/auth.js';
-// import { loginWithGoogleOAuthSchema } from '../validation/auth.js';
-// import { loginWithGoogleController } from '../controllers/auth.js';
 
 const router = Router();
 
@@ -30,20 +22,6 @@ router.post(
 );
 
 router.post('/logout', ctrlWrapper(logoutUserController));
-
-router.post('/refresh', ctrlWrapper(refreshUserSessionController));
-
-router.post(
-  '/send-reset-email',
-  validateBody(requestResetEmailSchema),
-  ctrlWrapper(requestResetEmailController),
-);
-
-router.post(
-  '/reset-password',
-  validateBody(resetPasswordSchema),
-  ctrlWrapper(resetPasswordController),
-);
 
 // router.get('/get-oauth-url', ctrlWrapper(getGoogleAuthUrlController));
 
